# which-llm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  enrich.py  plot_pareto.py  query.py
.claude-plugin/: README.md  marketplace.json
.github/ISSUE_TEMPLATE/: bug_report.md  parser_break.md
.github/workflows/: refresh.yml
artifacts/: models_enriched.csv
dev/: explore.py  find_slugs.py  inspect_fields.py  inspect_openrouter.py  verify.py  verify_or.py
examples/: README.md
plugins/which-llm/.claude-plugin/: plugin.json
plugins/which-llm/artifacts/: models.csv  openrouter.json
plugins/which-llm/skills/which-llm/: SKILL.md  enrich.py  plot_pareto.py  pyproject.toml  query.py  scrape.py
plugins/which-llm/skills/which-llm/artifacts/: models.csv  models_enriched.csv  openrouter.json  unmatched.txt
plugins/which-llm/skills/which-llm/tests/: test_scrape.py
