[project]
name = "which-llm"
version = "0.2.0"
description = "Claude Code skill: query current LLM intelligence, cost, capabilities, and OpenRouter slugs (incl. free tier) from Artificial Analysis."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "adjusttext>=1.3.0",
    "matplotlib>=3.10.9",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
